Features/npc (#14)
* prevent to push to main

* Implement simple sphere (NPC) that is moving forward and backword, getting bigger when is near a character

* Update README.md

---------

Co-authored-by: Vanpersie505 <sclafaniisaac@gmail.com>