@@ -1,1 +1,9 @@
 # CSC165-FinalProject
+
+##Networking
+
+java myGame.NetworkingServer 6000 UDP
+
+java --add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -Dsun.java2d.d3d=false -Dsun.java2d.uiScale=1 myGame.MyGame localhost 6000 UDP
+
+ java --add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -Dsun.java2d.d3d=false -Dsun.java2d.uiScale=1 myGame.MyGame localhost 6000 UDP
